--- a/bikeBros/src/app/components/route-list/route-list.component.scss
+++ b/bikeBros/src/app/components/route-list/route-list.component.scss
@@ -87,3 +87,15 @@
 .slide-button-right {
   right: 8px;
 }
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  // gap: 5px;
+}
+
+.icon {
+  font-size: 30px;
+  margin-right: 5px;
+}
