--- a/bikeBros/src/app/components/edit-route-modal/edit-route-modal.component.html
+++ b/bikeBros/src/app/components/edit-route-modal/edit-route-modal.component.html
@@ -23,11 +23,10 @@
         <ion-select-option value="Alto">Alto</ion-select-option>
       </ion-select>
     </ion-item>
-    <ion-item>
+    <!-- <ion-item>
       <ion-label position="floating">Distancia</ion-label>
       <ion-input type="number" formControlName="distance"></ion-input>
-    </ion-item>
-
+    </ion-item> -->
     <ion-item>
       <ion-label position="floating">Localidad</ion-label>
       <ion-input type="string" formControlName="location"></ion-input>
@@ -79,7 +78,11 @@
     </ion-item>
     <ion-item>
       <ion-label>Imágenes</ion-label>
+      <label for="file-upload">
+        <ion-icon name="cloud-upload"></ion-icon>
+      </label>
       <input
+        id="file-upload"
         type="file"
         multiple
         (change)="onImageChange($event)"
