--- a/bikeBros/src/app/components/report-event-list/report-event-list.component.html
+++ b/bikeBros/src/app/components/report-event-list/report-event-list.component.html
@@ -13,20 +13,19 @@
     <ion-list *ngIf="reports?.length">
       <!-- <ion-button>Eliminar</ion-button> -->
       <ion-item *ngFor="let report of reports">
-        <!-- <ion-thumbnail slot="start">
-        <img [src]="comment.authorAvatarURL" />
-      </ion-thumbnail> -->
         <ion-label text-wrap>
           <h2>{{ report?.reason }}</h2>
           <p>{{ report?.description }}</p>
-          <!-- <p>ID: {{ comment._id }}</p> -->
-          <!-- <ion-button color="danger">Eliminar</ion-button> -->
+          <p>ID: {{ report._id }}</p>
+          <ion-button color="danger" (click)="deleteEventReport(report._id)"
+            >Eliminar</ion-button
+          >
         </ion-label>
       </ion-item>
     </ion-list>
 
-    <ion-text *ngIf="!reports || reports.length === 0"
-      >No hay comentarios.</ion-text
-    >
+    <div class="noreports" *ngIf="!reports || reports.length === 0">
+      <p>No hay reportes en este evento.</p>
+    </div>
   </ion-card>
 </ion-content>
