--- a/bikeBros/src/app/pages/public-profile/public-profile.page.html
+++ b/bikeBros/src/app/pages/public-profile/public-profile.page.html
@@ -41,13 +41,9 @@
 
   <ion-card>
     <ion-button expand="block" (click)="openFavRoutes()"
-      >Mis Rutas Favoritas</ion-button
+      >Enviar Mensaje</ion-button
     >
   </ion-card>
-  <ion-card>
-    <ion-button expand="block" (click)="openEventsJoined()">
-      Eventos pendientes</ion-button
-    >
-  </ion-card>
+
   <ion-item-divider></ion-item-divider>
 </ion-content>
