--- a/bikeBros/src/app/components/event-list/event-list.component.scss
+++ b/bikeBros/src/app/components/event-list/event-list.component.scss
@@ -1,7 +1,7 @@
 .center {
   text-align: center;
   font-size: x-large;
-  border-bottom: 1px solid white;
+  // border-bottom: 1px solid white;
   padding-bottom: 10px;
   // border: 1px solid red;
 }
@@ -16,4 +16,7 @@
 .icon {
   font-size: 30px;
   margin-right: 5px;
+}
+.image-container {
+  max-height: 300px;
 }
