--- a/bikeBros/src/app/components/joined-events-list/joined-events-list.component.scss
+++ b/bikeBros/src/app/components/joined-events-list/joined-events-list.component.scss
@@ -3,3 +3,19 @@
   font-size: large;
   padding-top: 20px;
 }
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  // gap: 5px;
+}
+
+.center {
+  text-align: center;
+  font-size: x-large;
+}
+
+.icon {
+  font-size: 30px;
+  margin-right: 5px;
+}
