--- a/bikeBros/src/app/components/register-route-modal/register-route-modal.component.html
+++ b/bikeBros/src/app/components/register-route-modal/register-route-modal.component.html
@@ -13,7 +13,7 @@
   <form [formGroup]="routeForm" (ngSubmit)="submitForm()">
     <ion-item>
       <ion-label position="floating">Nombre de la ruta</ion-label>
-      <ion-input formControlName="name"></ion-input>
+      <ion-input formControlName="name" maxlength="30"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Nivel de dificultad</ion-label>
@@ -26,12 +26,19 @@
 
     <ion-item>
       <ion-label position="floating">Localidad</ion-label>
-      <ion-input type="string" formControlName="location"></ion-input>
+      <ion-input
+        type="string"
+        formControlName="location"
+        maxlength="30"
+      ></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">Descripción</ion-label>
-      <ion-textarea formControlName="description"></ion-textarea>
+      <ion-textarea
+        formControlName="description"
+        maxlength="200"
+      ></ion-textarea>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Origen</ion-label>
