--- a/bikeBros/src/app/pages/event/event.page.scss
+++ b/bikeBros/src/app/pages/event/event.page.scss
@@ -23,7 +23,7 @@
   text-align: center;
   text-transform: uppercase;
   margin-bottom: 10px;
-  border-bottom: 1px solid white;
+  // border-bottom: 1px solid white;
   padding-bottom: 10px;
 }
 
