--- a/bikeBros/src/app/pages/main/create-route/create-route.page.html
+++ b/bikeBros/src/app/pages/main/create-route/create-route.page.html
@@ -10,16 +10,25 @@
   <ion-content>
     <div *ngIf="selectedPage === 'rutas'">
       <!-- Contenido de la página de rutas -->
-      <ion-button class="create" (click)="showRouteRegisterModal()"
-        >Crear Ruta</ion-button
+      <ion-fab
+        vertical="bottom"
+        horizontal="end"
+        slot="fixed"
+        style="position: fixed"
       >
+        <ion-fab-button (click)="showRouteRegisterModal()">
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+      </ion-fab>
       <app-route-list></app-route-list>
     </div>
     <div *ngIf="selectedPage === 'eventos'">
       <!-- Contenido de la página de eventos -->
-      <ion-button class="create" (click)="showEventRegisterModal()"
-        >Crear Evento</ion-button
-      >
+      <ion-fab vertical="bottom" horizontal="end" style="position: fixed">
+        <ion-fab-button (click)="showEventRegisterModal()">
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+      </ion-fab>
       <app-event-list></app-event-list>
     </div>
   </ion-content>
