--- a/bikeBros/src/app/components/route-list/route-list.component.scss
+++ b/bikeBros/src/app/components/route-list/route-list.component.scss
@@ -100,3 +100,21 @@
   font-size: 30px;
   margin-right: 5px;
 }
+.floating-toolbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+}
+
+.floating-toolbar ion-range {
+  margin-top: -25px;
+}
+
+.floating-toolbar ion-searchbar {
+  background: transparent;
+  position: relative;
+  z-index: 1;
+  margin-top: 70px;
+}
