--- a/bikeBros/src/app/pages/main/profile-options/profile-options.page.scss
+++ b/bikeBros/src/app/pages/main/profile-options/profile-options.page.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-left: 100px;
+  padding-left: 90px;
 }
 
 .img-container ion-avatar {
@@ -21,4 +21,5 @@
   padding-top: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid white;
+  color: white;
 }
