--- a/bikeBros/src/app/pages/public-profile/public-profile.page.scss
+++ b/bikeBros/src/app/pages/public-profile/public-profile.page.scss
@@ -7,5 +7,6 @@
   // text-transform: uppercase;
   padding-top: 10px;
   padding-bottom: 10px;
+  color: white;
   border-bottom: 1px solid white;
 }
