--- a/bikeBros/src/app/components/event-list/event-list.component.html
+++ b/bikeBros/src/app/components/event-list/event-list.component.html
@@ -6,18 +6,35 @@
     ></ion-searchbar>
     <ion-item>
       <ion-label>Fecha de inicio:</ion-label>
-      <ion-date display-format="DD/MM/YYYY" [(ngModel)]="startDate"></ion-date>
+      <input
+        type="date"
+        name="trip-start"
+        min="2023-01-01"
+        max="2025-12-31"
+        [(ngModel)]="startDate"
+      />
     </ion-item>
 
     <ion-item>
       <ion-label>Fecha de fin:</ion-label>
-      <ion-date display-format="DD/MM/YYYY" [(ngModel)]="endDate"></ion-date>
+      <input
+        type="date"
+        min="2023-01-01"
+        max="2025-12-31"
+        [(ngModel)]="endDate"
+      />
     </ion-item>
   </ion-toolbar>
 </ion-header>
 
-<ion-list style="margin-top: 60px">
-  <ion-card *ngFor="let event of events | eventFilter : searchTerm">
+<ion-list style="margin-top: 150px">
+  <ion-card
+    *ngFor="
+      let event of events
+        | eventFilter : searchTerm
+        | eventFilterDate : startDate : endDate
+    "
+  >
     <ion-slides>
       <ion-slide *ngFor="let imageURL of event.ruta?.images">
         <div class="image-container">
