--- a/bikeBros/src/app/pages/event/event.page.html
+++ b/bikeBros/src/app/pages/event/event.page.html
@@ -21,9 +21,13 @@
       {{ currentEvent?.ruta?.name }}
     </ion-card-title>
     <div class="main-info">
-      <ion-item>
+      <!-- <ion-item>
         <ion-icon name="navigate-circle-outline" class="icon"></ion-icon>
         {{ currentEvent?.ruta?.location }}
+      </ion-item> -->
+      <ion-item>
+        <ion-icon name="navigate-circle-outline" class="icon"></ion-icon>
+        {{ currentEvent?.ubicacion }}
       </ion-item>
       <ion-item>
         <ion-icon class="icon" name="person-circle" class="icon"></ion-icon>
