--- a/bikeBros/src/app/pages/event/event.page.scss
+++ b/bikeBros/src/app/pages/event/event.page.scss
@@ -24,6 +24,7 @@
   text-transform: uppercase;
   margin-bottom: 10px;
   // border-bottom: 1px solid white;
+  padding-top: 20px;
   padding-bottom: 10px;
 }
 
