--- a/bikeBros/src/app/pages/main/profile/profile.page.html
+++ b/bikeBros/src/app/pages/main/profile/profile.page.html
@@ -38,6 +38,11 @@
       Eventos pendientes</ion-button
     >
   </ion-card>
+  <ion-card>
+    <ion-button expand="block" (click)="openMessages()">
+      Mis mensajes</ion-button
+    >
+  </ion-card>
   <ion-item-divider></ion-item-divider>
 
   <ion-card *ngIf="userStats" class="stats">
