--- a/bikeBros/src/app/pages/register/register.page.scss
+++ b/bikeBros/src/app/pages/register/register.page.scss
@@ -14,3 +14,11 @@ label[for="file-upload"] {
   display: inline-block;
   cursor: pointer;
 }
+
+.terms-link {
+  margin-top: 10px;
+  font-size: 12px;
+  white-space: normal;
+  word-wrap: break-word;
+  padding-left: 10px;
+}
