--- a/bikeBros/src/app/pages/register/register.page.html
+++ b/bikeBros/src/app/pages/register/register.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Register</ion-title>
+    <ion-title>Registro</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -65,6 +65,17 @@
         accept="image/*"
       />
     </ion-item>
+    <ion-item>
+      <ion-checkbox
+        formControlName="terms"
+        [(ngModel)]="termsAccepted"
+      ></ion-checkbox>
+
+      <ion-label class="terms-link"
+        >Acepto los
+        <a (click)="openTerms()">términos y condiciones de uso</a></ion-label
+      >
+    </ion-item>
 
     <ion-row>
       <ion-col>
@@ -73,6 +84,7 @@
           color="danger"
           expand="block"
           (click)="register()"
+          [disabled]="registerForm.invalid || !termsAccepted"
           >Registrarse</ion-button
         >
       </ion-col>
