--- a/bikeBros/src/app/pages/event/event.page.html
+++ b/bikeBros/src/app/pages/event/event.page.html
@@ -25,10 +25,11 @@
         <ion-icon name="navigate-circle-outline" class="icon"></ion-icon>
         {{ currentEvent?.ruta?.location }}
       </ion-item> -->
-      <ion-item>
+      <ion-item class="location">
         <ion-icon name="navigate-circle-outline" class="icon"></ion-icon>
         {{ currentEvent?.ubicacion }}
       </ion-item>
+
       <ion-item>
         <ion-icon class="icon" name="person-circle" class="icon"></ion-icon>
 
