--- a/bikeBros/src/app/components/event-list/event-list.component.html
+++ b/bikeBros/src/app/components/event-list/event-list.component.html
@@ -82,7 +82,7 @@
         color="danger"
         (click)="setIdEvent(event._id)"
         (click)="openReport()"
-        ><ion-icon name="ban-outline"></ion-icon
+        ><ion-icon name="alert-circle-outline"></ion-icon
       ></ion-button>
       <ion-button
         color="warning"
