--- a/bikeBros/src/app/components/edit-route-modal/edit-route-modal.component.html
+++ b/bikeBros/src/app/components/edit-route-modal/edit-route-modal.component.html
@@ -93,7 +93,7 @@
         required
       />
     </ion-item>
-    <ion-button type="submit" expand="block" [disabled]="!routeForm.valid"
+    <ion-button type="submit" expand="block"
       >Guardar ruta modififcada</ion-button
     >
   </form>
