--- a/bikeBros/src/app/components/event-list/event-list.component.html
+++ b/bikeBros/src/app/components/event-list/event-list.component.html
@@ -47,7 +47,7 @@
     }}</ion-card-header>
 
     <ion-item>
-      <ion-icon name="locate-outline" class="icon"></ion-icon>
+      <ion-icon name="navigate-circle-outline" class="icon"></ion-icon>
       <ion-label>{{ event.ubicacion }}</ion-label>
     </ion-item>
     <ion-item>
