--- a/bikeBros/src/app/components/event-list/event-list.component.scss
+++ b/bikeBros/src/app/components/event-list/event-list.component.scss
@@ -3,7 +3,7 @@
   font-size: x-large;
   // border-bottom: 1px solid white;
   padding-bottom: 10px;
-  color: white;
+  // color: black;
   // border: 1px solid red;
 }
 
