--- a/bikeBros/src/app/components/route-list/route-list.component.html
+++ b/bikeBros/src/app/components/route-list/route-list.component.html
@@ -28,7 +28,7 @@
 <ion-list style="margin-top: 130px">
   <ion-card
     *ngFor="
-      let ruta of routes
+      let ruta of displayedRoutes
         | routesFilter : searchTerm
         | routesFilterLevel : selectedDifficulty
         | routeFilterDistance : kmDistance
